tests/sumo/errors/unknown_config_option_copy/options.sumo
-c sumo.sumocfg
--no-step-log
